<?xml version="1.0"?>
<package format="2">
  <name>iosb_sensor_msgs</name>
  <version>1.0.0</version>
  <description>Custom sensor messages.</description>
  <maintainer email="abcd@abcd.ab">abcd</maintainer>
  <license>Company Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>iosb_geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
